Add new method for testing database performance
 - new method getTimeOfQueryPerformance in DatabaseManager on all layers
 (RPC, api, bl, blImpl), can be called by anyone with role SELF and it
 will count processing time (in nanoseconds) of update operation (set
 timestamp to database table configurations to predefined property)
 - for this purpose, other methods was created to support this
 funcionality like createProperty (to create a new property in
 configurations table), propertyExists (to check if specific property
 already exists or need to be created)
 - creating of this new property was added to initialization process of
 DatabaseManager (if property doesn't exist, it will be created on start
 of Perun system)
 - method were added also to openapi perun module
 - database schemas were modified to remove existing constraint on
 configurations table to allow any property (not just database version)
 - basic tests of new methods were added
 - database version was increased

 IMPORTANT: database need to be changed manually for this commit,
 constraint need to be removed before using properly
