# perun-openapi/openapi.yml
@@ -3365,6 +3365,18 @@ paths:
         default:
           $ref: '#/components/responses/ExceptionResponse'
 
+  /json/databaseManager/getTimeOfQueryPerformance:
+    get:
+      tags:
+        - DatabaseManager
+      operationId: getTimeOfQueryPerformance
+      summary: Get time in ns "nanoseconds" of calling 1 simple update query to DB
+      responses:
+        '200':
+          $ref: '#/components/responses/LongResponse'
+        default:
+          $ref: '#/components/responses/ExceptionResponse'
+
   #################################################
   #                                               #
   # ExtSourcesManager                             #
@@ -3372,7 +3384,7 @@ paths:
   #################################################
 
   #TODO createExtSource
-  
+
   #TODO deleteExtSource
 
   /json/extSourcesManager/getExtSourceById:
@@ -3402,11 +3414,11 @@ paths:
           $ref: '#/components/responses/ExtSourceResponse'
         default:
           $ref: '#/components/responses/ExceptionResponse'
-  
+
   #TODO getVoExtSources
-  
+
   #TODO getGroupExtSources
-  
+
   /json/extSourcesManager/getExtSources:
     get:
       tags:
@@ -3420,11 +3432,11 @@ paths:
           $ref: '#/components/responses/ExceptionResponse'
 
   #TODO addExtSource
-  
+
   #TODO removeExtSource
-  
+
   #TODO loadExtSourcesDefinitions
-  
+
   #################################################
   #                                               #
   # UsersManager                                  #
